# TinyIM

./: .gitignore  README.md
Code/Client/ClientCore_TinyIM/: CMakeLists.txt  build32.bat
Code/Client/ClientCore_TinyIM/ClientCore/: CClientSess.cpp  CClientSess.h  CFileTransSpeedUtil.cpp  CFileTransSpeedUtil.h  CHttpServer.cpp  CHttpServer.h  CMakeLists.txt  CMediumServer.cpp  CMediumServer.h  CMediumServerMultiCast.cpp  CMediumServerMultiCast.h  CMsgPersistentUtil.cpp  CMsgPersistentUtil.h  CNetUtil.cpp  CNetUtil.h  CServerSess.cpp  CServerSess.h  CUdpMultiCastReciver.cpp  CUdpMultiCastReciver.h  CUdpMultiCastSender.cpp  CUdpMultiCastSender.h  MainFunc.cpp  MainFunc.h  MainFuncMultiCast.cpp  reciver.cpp  sender.cpp
Code/Client/ClientCore_TinyIM/HTTP_Test/: HttpFunction.cpp  Http_Test.cpp
Code/Client/ClientCore_TinyIM/IMRobot/: CImRobot.cpp  CImRobot.h
Code/Client/ClientCore_TinyIM/UnitTest/: MsgSaveToDB_Test.cpp
Code/Client/ClientUI/: CMakeLists.txt
Code/Client/ClientUI/Source/: AboutDlg.cpp  AboutDlg.h  AddFriendConfirmDlg.cpp  AddFriendConfirmDlg.h  BuddyChatDlg.cpp  BuddyChatDlg.h  BuddyInfoDlg.cpp  BuddyInfoDlg.h  BuddyListCtrl.cpp  BuddyListCtrl.h  CRegisterSkinHyperLink.cpp  CRegisterSkinHyperLink.h  CascadeWinManager.cpp  CascadeWinManager.h  ChangePicHead.cpp  ChangePicHead.h  ChangePicHeadDlg.cpp  ChangePicHeadDlg.h  ChatDlgCommon.cpp  ChatDlgCommon.h  ChatTabMgr.cpp  ChatTabMgr.h  ClosePromptDlg.cpp  ClosePromptDlg.h  Crash.cpp  CreateNewGroupDlg.cpp  CreateNewGroupDlg.h  CustomMsgDef.h  DstVersion.h  EncodingUtil.cpp  EncodingUtil.h  FaceCtrl.cpp  FaceCtrl.h  FaceList.cpp  FaceList.h  FaceSelDlg.cpp  FaceSelDlg.h  File2.cpp  File2.h  FileTool.cpp  (+83 more)
Code/Client/ClientUI/Source/Proto/: Proto.cpp  Proto.h
Code/Client/ClientUI/Source/SkinLib/: SkinManager.cpp
Code/Client/ClientUI/Source/asioNet/: CClientSess.cpp
Code/Client/ClientUI/Source/asioNet/include/common/: CommonConfig.h  CommonFunction.h
Code/Client/ClientUI/Source/net/: IUProtocolData.cpp  IUProtocolData.h
Code/CommonFunction/: CFileUtil.cpp  CFileUtil.h
Code/JavaCode/: EnumTest.java  Main.java
Code/JavaCode/CommonMsg/: BaseMsg.java  TransMsg.java
Code/JavaCode/Enum/: ClientNetType.java  ClientOsType.java  ErrorCodeType.java  FileTransType.java  MsgType.java
Code/Server/ChatServer/MediumServer/: CClientSess.h  CMakeLists.txt  CMediumServer.cpp  CMediumServer.h  CMySqlConnect.cpp  CServerSess.h  CTimeUtil.h  CUdpServer.h  EncodingUtil.cpp  MediumServer.cpp
Code/Server/ChatServer/include/mysql/: CMySqlConnect.h  CMysqlStruct.h
Code/msgStruct/: CommonDef.cpp  CommonDef.h  CommonMsg.cpp  CommonMsg.h
Doc/: ChatServer的主要文件用途介绍.md  ClientCore的主要文件用途介绍.md  ClientUI的主要文件用途介绍.md  TinyIM_推广.md
